--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Weather According to Matt</title>
 </head>
 <div class="title">
@@ -31,6 +32,6 @@
        <div id="right_col"></div>                   
     </div>
 </section>
-<script src="script.js"></script>
+<script src="assets/script.js"></script>
 </body>
 </html>
