--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div id="city_header">
     </div>
     <div class="weather_content">
-        <div id="left_col"></div>
-       <div id="right_col"></div>                   
+        <div id="leftCol"></div>
+       <div id="rightCol"></div>                   
     </div>
 </section>
 <script src="assets/script.js"></script>
