--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/Style.css">
+    <link rel="stylesheet" href="Assets/Style.css">
     <title>Weather According to Matt</title>
 </head>
 <div class="title">
@@ -30,6 +30,6 @@
        <div id="rightCol"></div>                   
     </div>
 </section>
-<script src="assets/Script.js"></script>
+<script src="Assets/Script.js"></script>
 </body>
 </html>
