--- a/index.html
+++ b/index.html
@@ -5,31 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="Assets/Style.css">
-    <title>Weather According to Matt</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Matt's Weather</title>
 </head>
-<div class="title">
-    <h1>Today's Weather</h1>
+<body>
+    <div class="title">
+        <h1>What's the Weather?</h1>    
     </div>
-<label for="city">Enter City</label>
-<input oninput="get_q(this)" type="text" id="city"> 
-<div class=buttons>
-    <select name="units" id="units" onchange="define_units(this)">
-        <option value="PickOne">Pick One</option>
-        <option value="imperial">Imperial</option>
-        <option value="metric">Metric</option>
-    </select>
-    <button class="btn btn-secondary weather_button" onclick="search(), remove()">Get Weather</button>
-</div>
-
-<section id="user_generated_content">
-    <div id="city_header">
+    
+    <label for="user_city">Please enter your city:</label>
+    <input oninput="get_q(this)" type="text" id="user_city"> 
+    <div class=activate_buttons>
+        <select name="units" id="units" onchange="define_units(this)">
+            <option value="PickOne">Pick One</option>
+            <option value="imperial">Imperial</option>
+            <option value="metric">Metric</option>
+        </select>
+        <button class="btn btn-secondary weather_button" onclick="search(), remove()">Get Weather</button>
     </div>
-    <div class="weather_content">
-        <div id="leftCol"></div>
-       <div id="rightCol"></div>                   
+    <div id="not_activated">
+        <p>You have not activated the weather finder yet.</p>
     </div>
-</section>
-<script src="Assets/Script.js"></script>
+    <section id="user_generated_content">
+        <div id="city_header">
+            </div>
+        <div class="weather_content">
+            <div id="left_col"></div>           
+            <div id="right_col"></div>
+        </div>
+    </section>
+<script src="script.js"></script>
 </body>
 </html>
