--- a/index.html
+++ b/index.html
@@ -4,36 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/style.css">
-    <title>Matt's Weather</title>
+    <title>Weather</title>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./script.js"></script>
 </head>
 <body>
-    <div class="title">
-        <h1>What's the Weather?</h1>    
-    </div>
-    
-    <label for="user_city">Please enter your city:</label>
-    <input oninput="get_q(this)" type="text" id="user_city"> 
-    <div class=activate_buttons>
-        <select name="units" id="units" onchange="define_units(this)">
-            <option value="PickOne">Pick One</option>
-            <option value="imperial">Imperial</option>
-            <option value="metric">Metric</option>
-        </select>
-        <button class="btn btn-secondary weather_button" onclick="search(), remove()">Get Weather</button>
-    </div>
-    <div id="not_activated">
-        <p>You have not activated the weather finder yet.</p>
-    </div>
-    <section id="user_generated_content">
-        <div id="city_header">
-            </div>
-        <div class="weather_content">
-            <div id="left_col"></div>           
-            <div id="right_col"></div>
+    <div class="card">
+        <div class="search">
+            <input type="text" class="search-bar">
+            <button><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1.5em" width="1.5em" xmlns="http://www.w3.org/2000/svg"><path d="M10,18c1.846,0,3.543-0.635,4.897-1.688l4.396,4.396l1.414-1.414l-4.396-4.396C17.365,13.543,18,11.846,18,10 c0-4.411-3.589-8-8-8s-8,3.589-8,8S5.589,18,10,18z M10,4c3.309,0,6,2.691,6,6s-2.691,6-6,6s-6-2.691-6-6S6.691,4,10,4z"></path><path d="M11.412,8.586C11.791,8.966,12,9.468,12,10h2c0-1.065-0.416-2.069-1.174-2.828c-1.514-1.512-4.139-1.512-5.652,0 l1.412,1.416C9.346,7.83,10.656,7.832,11.412,8.586z"></path></svg></button>
         </div>
-    </section>
-<script src="script.js"></script>
+        <div class="weather"></div>
+        <h2 class="city">Weather in Kansas City</h2>
+        <div class="temp">51°C</div>
+        <img src="" alt="" class="icon" />
+        <div class="description">Cloudy</div>
+        <div class="humidity">Humidity: 60%</div>
+        <div class="wind">Wind speed: 6.2 km</div>
+    </div>
 </body>
 </html>
